# LabWork2

./: .gitignore  CMakeLists.txt  LabWork2.sln  LabWork2.vcxproj  commands.c  commands.h  input.c  macro.h  main.c  main.cpp  messages.c  messages.h  options.c  options.h
LabWork.Lib/: LabWork.Lib.vcxproj  LabWork.Lib.vcxproj.filters  functions.c  functions.h
LabWork2.Lib/: CMakeLists.txt  LabWork2.Lib.vcxproj  functions.c  functions.h
LabWork2.Lib.Tests/: CMakeLists.txt  LabWork2.Lib.Tests.vcxproj  test.cpp
LabWork2.Main/: LabWork2.Main.vcxproj  main.c
